# JARVIS

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.cursor/prompts/: agent_instructions.md
.cursor/rules/: development-workflow.mdc  package-preferences.mdc
src/jarvis/: __init__.py  math_client.py  math_server.py
tests/: __init__.py  test_math_client.py  test_math_server.py
